# RustLearning

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  rust.yml
axum-web-app/: Cargo.toml
axum-web-app/src/: error.rs  main.rs  model.rs
axum-web-app/src/web/: mod.rs  mw_require_auth.rs  routes_hello.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
axum-web-app/tests/: quick_dev.rs
httpie/: Cargo.toml
httpie/doc/: prd.md
httpie/src/: main.rs
httpie/tests/: cli.rs
queryer/: Cargo.toml
queryer/examples/: ast.ron  covid.rs  dialect.rs
queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs
thumbor/: Cargo.toml  abi.proto  build.rs
thumbor/src/: main.rs
thumbor/src/pb/: abi.rs  mod.rs
