[package]
name = "axum-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-cookies = "0.10.0"
tower-http = { version = "0.6.1", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.89"
httpc-test = "0.1.10"
