[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
photon-rs = "0.3.2"
prost = "0.12.6"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
