[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.5"
base64 = "0.22.1"
bytes = "1.7.2"
lru = "0.12.4"
percent-encoding = "2.3.1"
photon-rs = "0.3.2"
prost = "0.13.2"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
prost-build = "0.13.2"
